2007-11-20  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #493783

	* em-format-html.c: (efh_format_timeout): Do not erase old content
	when re-formatting same mail, so keep scroll position.

2007-11-18  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	** Fix bug #495875

	* em-folder-tree.c:
	right click menu reordering

2007-11-14  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-tree.c (em_folder_tree_get_selected_folder_info):
	Call camel_folder_info_new() instead of g_new0().

2007-11-13  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #263236

	* mail.error.xml: Terminology cleanup.

2007-11-12  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #263236

	* mail.error.xml: New message "ask-delete-vfolder-msg".
	* em-folder-view.c: (emfv_delete_msg_response),
	(emfv_popup_delete): When deleting from vFolder, ask if really want
	to and warn about deleting in a real folder too.
	* evolution-mail.schemas.in: New option
	"/apps/evolution/mail/prompts/delete_in_vfolder" to not ask again.

2007-11-08  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-selector.h:
	Fix some typos in the GObject macros.

2007-11-06  Michael Monreal  <mmonreal@svn.gnome.org>

	** Fix for bug #492170

	* em-migrate.c:
	* evolution-mail.schemas.in:
	* mail-config.c:
	Replace the old color definitions with very similar colors from
	the Tango color palette.

2007-11-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #343011
	(restore collapse state of selected folder after start)

	* em-folder-tree.c: (emft_maybe_expand_row): Do not expand subtree of
	a node, only make it visible.
	* em-folder-tree-model.h: (em_folder_tree_model_get_expanded_uri),
	(em_folder_tree_model_set_expanded_uri):
	* em-folder-tree-model.c: (em_folder_tree_model_get_expanded_uri),
	(em_folder_tree_model_set_expanded_uri):
	Same as ..._get/_set_expanded, but using 'uri', instead of 'key'.
	* em-folder-tree-model.c: (emftm_uri_to_key): New helper function.